Fix icon alignment

--- a/client/static/less/Roster.less
+++ b/client/static/less/Roster.less
@@ -599,7 +599,7 @@
 
             &.shift-status-icon {
               text-align: left;
-              margin-top: 0*@px;
+              margin-top: 0;//0*@px;
               margin-left: 10*@px;
             }
           }
